# gurbani-searcher

./: .gitignore  Cargo.toml
resources/: gui.ui  theme.css
src/: lib.rs  main.rs
