[package]
name = "gurbani-searcher"
version = "0.0.1"
authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
description = "An interface to query a Gurbani database"
license = "MIT"
repository = "https://github.com/gsingh93/libgurbani"

[lib]
name = "libgurbani"
path = "src/lib.rs"

[[bin]]
name = "gurbani-searcher"
path = "src/main.rs"

[dependencies]
rusqlite = "*"

[dependencies.pango]
path = "../pango"

[dependencies.gtk]
path = "../gtk"
version = "*"
features = ["gtk_3_14"]

[dependencies.deuterium]
version = "*"
default-features = false
